DeExtension: début de la création de l'extensionÃ

--- a/html/wp-content/themes/_underscore/style.css
+++ b/html/wp-content/themes/_underscore/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: wp1
+Theme Name: underscore
 Theme URI: http://underscores.me/
 Author: Underscores.me
 Author URI: http://underscores.me/
