--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 .carrousel {
   position: absolute;
-  left: 25vw;
-  right: 25vh;
-  width: 50vw;
-  height: 50vh;
+  left: 12.5vw;
+  right: 12.5vh;
+  width: 75vw;
+  height: 75vh;
   background-color: aqua;
   transform: scale(0);
   transition: transform 1s;
+  background-color: pink;
 }
 
 .carrousel-ouvrir {
