--- a/html/wp-content/plugins/pca_carrousel/style.css
+++ b/html/wp-content/plugins/pca_carrousel/style.css
@@ -1,4 +1,4 @@
-.carrousel{
+.carrousel {
   position: absolute;
   left: 12.5vw;
   right: 12.5vh;
@@ -10,11 +10,11 @@
   background-color: red;
 }
 
-.carrousel-ouvrir{
+.carrousel-ouvrir {
   transform: scale(1);
 }
 
-.btn_fermer{
+.btn_fermer {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,4 +25,4 @@
   height: 2rem;
 }
 
-
+/*# sourceMappingURL=style.css.map */
