c11 - Création des boutons radio pour l'afficahge des images

--- a/html/wp-content/plugins/pca_carrousel/sass/style.scss
+++ b/html/wp-content/plugins/pca_carrousel/sass/style.scss
@@ -6,12 +6,14 @@
   height: 75vh;
   background-color: aqua;
   transform: scale(0);
-  transition: transform 1s;
-  background-color: red;
+  opacity: 0;
+  transition: transform 1s, opacity 1s;
+  z-index: 1;
 }
 
-.carrousel-ouvrir{
+.carrousel--ouvrir{
   transform: scale(1);
+  opacity: 1;
 }
 
 .btn_fermer{
@@ -25,4 +27,31 @@
   height: 2rem;
 }
 
+.carrousel__figure{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.carrousel__figure__img{
+  display: block;
+  position: absolute;
+  object-fit: cover;
+  top: 0;
+  left:0;
+  width: 100%;
+  opacity: 0;
+  transition: opacity 1s;
+}
+.carrousel__figure__img--activer{
+  opacity:1;
+}
 
+.carrousel__form{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 3;
+  display : flex;
+  justify-content: center;
+  margin: 1rem;
+}
