--- a/html/wp-content/plugins/pca_carrousel/sass/style.scss
+++ b/html/wp-content/plugins/pca_carrousel/sass/style.scss
@@ -21,16 +21,15 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 4px;
+  top: 4px;
   width: 2rem;
   height: 2rem;
+  z-index: 3;
 }
 
 .carrousel__figure{
-  position: relative;
-  width: 100%;
-  height: 100%;
+  margin: 0;
 }
 .carrousel__figure__img{
   display: block;
@@ -39,6 +38,7 @@
   top: 0;
   left:0;
   width: 100%;
+  height: 100%;
   opacity: 0;
   transition: opacity 1s;
 }
